# PythonTrainig

./: .gitignore  main.py  mcp_host.py  my_server.py  pyproject.toml  test_process_data.py
